--- a/.gitignore
+++ b/.gitignore
@@ -169,3 +169,6 @@ fabric.properties
 .idea/**/azureSettings.xml
 
 # End of https://www.toptal.com/developers/gitignore/api/c,clion
+/main
+/CMakeLists.txt
+/.xdp-gitignore-OGP9E5
