.gitignore update gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -169,6 +169,8 @@ fabric.properties
 .idea/**/azureSettings.xml
 
 # End of https://www.toptal.com/developers/gitignore/api/c,clion
-/main
+/src/main
 /CMakeLists.txt
 /.xdp-gitignore-OGP9E5
+/.idea/labyrinth.iml
+/.idea/misc.xml
