CMakeLists.txt -maj
Signed-off-by: Vincent BRUNEAU <vincent.bruneau@etu.u-bordeaux.fr>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,13 +13,15 @@ find_package(SDL2 REQUIRED)
 include_directories(SDL2Test ${SDL2_INCLUDE_DIRS})
 
 # on crée les bibliothèques
-add_library(maze src/struct.c src/mazemaker.c src/solveur.c src/outside.c src/cmd.c src/main.c)
-#add_library(test_interne src/testing.c src/test.c)
+#pour tout le projet
+add_library(maze src/struct.c src/mazemaker.c src/solveur.c src/outside.c src/cmd.c)
+#juste pour les tests
+add_library(test_interne src/test.c)
 
 # on ajoute les exécutables
 add_executable(main src/main.c)
-#add_executable(test_interne src/testing.c)
+add_executable(test src/testing.c)
 
 # on ajoute les dépendances
 target_link_libraries(main maze ${SDL2_LIBRARIES})
-#target_link_libraries(test_interne maze test_interne ${SDL2_LIBRARIES})
+target_link_libraries(test maze test_interne ${SDL2_LIBRARIES})
