CMakeLists.txt -amélioration (thanks copilot)
Signed-off-by: Vincent BRUNEAU <vincent.bruneau@etu.u-bordeaux.fr>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,27 +1,26 @@
-# on défini le chemin
-link_directories(${CMAKE_SOURCE_DIR})
-
-# on défini le projet et ses prérequis
+# Define the minimum CMake version and the project
 cmake_minimum_required(VERSION 3.3)
 project(main)
 
-# on défini les flags utilisés lors de la compilation (à modifier si besoin)
+# Set the compilation flags
 set(CMAKE_C_FLAGS "-std=c99 -g -Wall")
 
-# SDL2
+# Find and include SDL2
 find_package(SDL2 REQUIRED)
-include_directories(SDL2Test ${SDL2_INCLUDE_DIRS})
+include_directories(${SDL2_INCLUDE_DIRS})
 
-# on crée les bibliothèques
-#pour tout le projet
-add_library(maze src/struct.c src/mazemaker.c src/solveur.c src/outside.c src/cmd.c)
-#juste pour les tests
-add_library(test_interne src/test.c)
+# Define source files for libraries
+set(MAZE_SOURCES src/struct.c src/mazemaker.c src/solveur.c src/outside.c src/cmd.c)
+set(TEST_SOURCES src/test.c)
 
-# on ajoute les exécutables
+# Create libraries
+add_library(maze ${MAZE_SOURCES})
+add_library(test_interne ${TEST_SOURCES})
+
+# Define executables
 add_executable(main src/main.c)
 add_executable(test src/testing.c)
 
-# on ajoute les dépendances
+# Link libraries to executables
 target_link_libraries(main maze ${SDL2_LIBRARIES})
 target_link_libraries(test maze test_interne ${SDL2_LIBRARIES})
