escape.c .h ajout d'un algo de visite basé sur le hunt and kill

--- a/.gitignore
+++ b/.gitignore
@@ -186,3 +186,22 @@ fabric.properties
 /test
 /cross_maze.txt
 /build/
+
+### CMake ###
+CMakeLists.txt.user
+CMakeCache.txt
+CMakeFiles
+CMakeScripts
+Testing
+Makefile
+cmake_install.cmake
+install_manifest.txt
+compile_commands.json
+CTestTestfile.cmake
+_deps
+
+### CMake Patch ###
+CMakeUserPresets.json
+
+# External projects
+*-prefix/
