Vincent sale merde t'as oublié de préciser au projet qu'il est en c

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 # Define the minimum CMake version and the project
 cmake_minimum_required(VERSION 3.3)
-project(main)
+project(main C)
 
 # Set the compilation flags
 set(CMAKE_C_FLAGS "-std=c99 -g -Wall")
