CMakeLists.txt cmd.c cmd.h main.c -supression main.c -supression cmd.h -translation de l'éxecutable principale vers cmd.c

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 # Define the minimum CMake version and the project
 cmake_minimum_required(VERSION 3.3)
-project(main C)
+project(Labyrinth C)
 
 # Set the compilation flags
 set(CMAKE_C_FLAGS "-std=c99 -g -Wall")
@@ -10,7 +10,7 @@ find_package(SDL2 REQUIRED)
 include_directories(${SDL2_INCLUDE_DIRS})
 
 # Define source files for libraries
-set(MAZE_SOURCES src/struct.c src/mazemaker.c src/solveur.c src/outside.c src/cmd.c src/escape.c)
+set(MAZE_SOURCES src/struct.c src/mazemaker.c src/solveur.c src/outside.c src/escape.c)
 set(TEST_SOURCES src/struct.c src/mazemaker.c src/solveur.c src/test.c)
 
 # Create libraries
@@ -18,7 +18,7 @@ add_library(maze ${MAZE_SOURCES})
 add_library(test_interne ${TEST_SOURCES})
 
 # Define executables
-add_executable(main src/main.c)
+add_executable(main src/cmd.c)
 add_executable(test src/testing.c)
 
 # Link libraries to executables
