--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,8 +10,8 @@ find_package(SDL2 REQUIRED)
 include_directories(${SDL2_INCLUDE_DIRS})
 
 # Define source files for libraries
-set(MAZE_SOURCES src/struct.c src/mazemaker.c src/solveur.c src/outside.c src/escape.c)
-set(TEST_SOURCES src/struct.c src/mazemaker.c src/solveur.c src/test.c)
+set(MAZE_SOURCES src/struct.c src/mazemaker.c src/solveur.c src/escape.c src/outside.c)
+set(TEST_SOURCES src/struct.c src/mazemaker.c src/solveur.c src/test.c src/escape.c src/outside.c)
 
 # Create libraries
 add_library(maze ${MAZE_SOURCES})
